--- a/public_html/style/profile.css
+++ b/public_html/style/profile.css
@@ -119,7 +119,7 @@
     position: fixed;
     height: 84%;
     width: 100%;
-    top: 150px;
+    top: 16%;
     background-color: black;
     color: cornflowerblue;
     overflow: auto;
